gcc/cp/

2008-09-30  Simon Martin  <simartin@users.sourceforge.net>

	    PR c++/37555
	    PR c++/37556
	    * decl.c (grokdeclarator): Set the type for typedefs to a
	    nested-name-specifier to error_mark_node.

gcc/testsuite/

2008-09-30  Simon Martin  <simartin@users.sourceforge.net>

	    PR c++/37555
	    * g++.dg/parse/error32.C: New test.

	    PR c++/37556
	    * g++.dg/parse/error33.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@140794 138bc75d-0d04-0410-961f-82ee72b054a4